--- a/LoginWebApplication/LoginWebApplication.csproj
+++ b/LoginWebApplication/LoginWebApplication.csproj
@@ -16,7 +16,7 @@
     <RootNamespace>LoginWebApplication</RootNamespace>
     <AssemblyName>LoginWebApplication</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -639,7 +639,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>false</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>51823</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
