--- a/LoginWebApplication/Web.config
+++ b/LoginWebApplication/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -9,9 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MyDBConn" 
-         connectionString="Data Source=INFOCONN-NB154\SQLEXPRESS;database=Anurag;Trusted_Connection=True;"
-         providerName="System.Data.SqlClient" />
+    <add name="MyDBConn" connectionString="Data Source=gwEj4X/hmrPkbvQfSJqS9wcNXpzaGNPJdMrpi+HvYqs=;database=tGYR/DpPHnkMP5nAJZkn9A==;Trusted_Connection=True;"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
